# iceberg-poc

./: .gitignore  README.md  docker-compose.yml
ingress-iceberg/ingress-iceberg/: .gitignore  Cargo.toml  README.md  docker-compose.yml  test_example.py
ingress-iceberg/ingress-iceberg/src/: arrow_handler.rs  iceberg_client.rs  lib.rs  main.rs  test_utils.rs  types.rs
ingress-iceberg/ingress-iceberg/tests/: integration_tests.rs
spark/: README.md  docker-compose.yml
spark/spark/conf/: spark-defaults.conf
trino/: README.md  analyze_partitioning.sql  config.properties  docker-compose.yml  test_partitioned_table.sql
trino/catalog/: iceberg.properties
